--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -6,11 +6,11 @@
   border-radius: 3rem;
   color: $VeryLightGray;
   text-transform: capitalize;
-  font-weight: 700;
+  font-weight: 600;
   letter-spacing: 0.5px;
   box-shadow: 0 0.5rem 1.5rem rgba($VeryDarkBlue, 0.2);
   cursor: pointer;
-  font-size: 1.8rem;
+  font-size: 1.6rem;
   display: inline-block;
   text-decoration: none;
   text-align: center;
